fix for detail job description overflow

--- a/index.sass
+++ b/index.sass
@@ -254,3 +254,4 @@ hr.color
 
 blockquote.pre
   white-space: pre
+  overflow-x: scroll
